[workspace]
members = [
  "sdk",
]
resolver = "2"

[package]
name = "lade"
version = "0.14.5-beta.1"
edition = "2024"
description = "Automatically load secrets from your preferred vault as environment variables, and clear them once your shell command is over."
license = "MPL-2.0"
repository = "https://github.com/zifeo/lade"

[dependencies]
anyhow = "1.0.102"
self_update = { version = "0.44.0", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
  "compression-zip-bzip2",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.3"
lade-sdk = { path = "./sdk", version = "0.14.5-beta.1" }
tokio = { version = "1", features = ["rt", "macros", "fs", "time"] }
indexmap = { version = "2.14.0", features = ["serde"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
openssl = { version = "0.10.78", features = ["vendored"] }
serde_json = "1.0.149"
futures = "0.3.32"
path-clean = "1.0.1"
directories = "6.0.0"
sysinfo = "0.38.4"
chrono = { version = "0.4.44", features = ["serde"] }
log = "0.4.29"
semver = "1.0.28"
textwrap = "0.16.2"
aho-corasick = "1.1.4"
rustc-hash = "2"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.31.2", features = ["signal", "term"] }

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.2.1"
predicates = "3"
temp-env = "0.3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "redact"
harness = false
