[workspace]
members = [
  "sdk",
]
resolver = "2"

[package]
name = "lade"
version = "0.16.0"
edition = "2024"
description = "Automatically load secrets from your preferred vault as environment variables, and clear them once your shell command is over."
license = "MPL-2.0"
repository = "https://github.com/zifeo/lade"

[dependencies]
anyhow = "1.0.103"
self_update = { version = "0.44.0", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
  "compression-zip-bzip2",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.4"
lade-sdk = { path = "./sdk", version = "0.16.0" }
tokio = { version = "1", features = ["rt", "macros", "fs", "time", "signal", "io-std"] }
indexmap = { version = "2.14.0", features = ["serde"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.11"
openssl = { version = "0.10.81", features = ["vendored"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
futures = "0.3.32"
path-clean = "1.0.1"
directories = "6.0.0"
sysinfo = "0.39.5"
chrono = { version = "0.4.45", features = ["serde"] }
log = "0.4.33"
semver = "1.0.28"
textwrap = "0.16.2"
owo-colors = "4.3.0"
aho-corasick = "1.1.4"
rustc-hash = "2"
base64 = "0.22.1"
sha2 = "0.11.0"
hex = "0.4.3"
url = "2.5"

[features]
default = ["docker-tests"]
docker-tests = []

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.31.3", features = ["signal", "term"] }

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.2.2"
predicates = "3"
temp-env = "0.3"
serde_json = "1.0.150"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "redact"
harness = false

[[test]]
name = "docker"
path = "tests/docker/main.rs"
required-features = ["docker-tests"]
