[package]
name = "lade-sdk"
version = "0.11.3-beta.1"
edition = "2021"
description = "Lade SDK"
license = "MPL-2.0"
repository = "https://github.com/zifeo/lade"

[dependencies]
access-json = "0.1.0"
anyhow = "1.0.83"
async-process = "2.2.2"
async-trait = "0.1.80"
directories = "5.0.1"
futures = "0.3.30"
itertools = "0.12.1"
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.4"
rust-ini = "0.21.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["fs"] }
toml = "0.8.12"
url = "2.5.0"
urlencoding = "2.1.3"
