[package]
name = "lade-sdk"
version = "0.12.1-beta.1"
edition = "2021"
description = "Lade SDK"
license = "MPL-2.0"
repository = "https://github.com/zifeo/lade"

[dependencies]
access-json = "0.1"
anyhow = "1"
async-process = "2.3"
async-trait = "0.1"
directories = "6"
futures = "0.3"
itertools = "0.14"
log = "0.4"
once_cell = "1"
regex = "1"
rust-ini = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["fs"] }
toml = "0.8"
url = "2.5"
urlencoding = "2"
