[package]
name = "lade-sdk"
version = "0.14.4-beta.1"
edition = "2024"
description = "Lade SDK"
license = "MPL-2.0"
repository = "https://github.com/zifeo/lade"

[dependencies]
access-json = "0.1"
anyhow = "1"
async-trait = "0.1"
directories = "6"
futures = "0.3"
itertools = "0.14"
log = "0.4"
once_cell = "1"
regex = "1"
rust-ini = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["fs", "process", "io-util"] }
toml = "1.1"
rustc-hash = "2"
url = "2.5"
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
